# thor

./: .gitignore  CMakeLists.txt  README.md
include/thor/: thor.hpp
include/thor/functional/: apply.h  common.h  functional.h  functor.h  invoke.h
include/thor/idioms/: any.h  common.h  idioms.h  object_pool.h  optional.h  scope_guard.h  smart_ptr.h  uncopyable.h  variant.h
include/thor/meta/: common.h  meta.h
include/thor/meta/base/: base.h  bool_type.h  empty_type.h  int_type.h  meta_function.h  null_type.h  utils.h  void_t.h
include/thor/meta/list/: list.h  type_element.h  type_list.h
include/thor/pattern/: common.h  factory.h  observer.h  pattern.h  pimpl.h  singleton.h  visitor.h
script/: clean.sh  compile.sh  test.sh
test/: help_function.h
test/functional/: CMakeLists.txt
test/functional/apply_invoke/: apply.cpp  invoke.cpp
test/functional/functor/: test_functor.cpp
test/idioms/: CMakeLists.txt
test/idioms/any/: any.cpp
test/idioms/object_pool/: object_pool.cpp
test/idioms/optional/: optional.cpp
test/idioms/scope_guard/: scope_guard.cpp
test/idioms/variant/: variant.cpp
test/meta/: CMakeLists.txt  main.cpp  test_base.cpp  test_has_member.cpp  test_list.cpp  test_list11.cpp  test_traits.cpp
test/pattern/: CMakeLists.txt
test/pattern/factory/: a.cpp  a.h  abstract.h  b.cpp  b.h  main.cpp
test/pattern/observer/: observer.cpp
test/pattern/pimpl/: main.cpp  type.cpp  type.h
test/pattern/singleton/: test_singleton.cpp
test/pattern/visitor/: add_visitor.cpp  base.h  base_visitor.h  main.cpp  mul_visitor.cpp
(+52 files in other folders)
